[package]
name = "node-constants"
version = "0.1.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

node-primitives = {path = '../primitives', default-features = false, version = '2.0.0'}

[features]
default = ['std']
std = [
    "node-primitives/std",
]
